--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,24 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+button {
+  background-color: #2cbbad;
+  color: #ffffff;
+  border: none;
+  padding: 5px 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: tomato;
+}
+
+button:disabled {
+  background-color: #eee;
+  color: #ccc;
+  cursor: auto;
+}
