update asset urls to be relative to current dir and update config urls for prod

--- a/src/app/components/add-restaurant/add-restaurant.component.html
+++ b/src/app/components/add-restaurant/add-restaurant.component.html
@@ -2,7 +2,7 @@
   <div class="add-restaurant-content card card-container">
     <img
       id="profile-img"
-      src="/assets/img/bienmenu-long-logo.png"
+      src="./assets/img/bienmenu-long-logo.png"
       class="profile-img-card"
     />
     <div class="alert alert-danger" *ngIf="isOperationFailed">
