--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home container-fluid">
-  <img src="/assets/img/home-background.jpg" />
+  <img src="./assets/img/home-background.jpg" />
   <div class="home-content container">
     <div class="d-flex flex-column">
       <h1>Welcome to BienMenu Admin Tool</h1>
