--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="login-content card card-container">
     <img
       id="profile-img"
-      src="/assets/img/bienmenu-long-logo.png"
+      src="./assets/img/bienmenu-long-logo.png"
       class="profile-img-card"
     />
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
