--- a/src/app/components/qr-code-viewer/qr-code-viewer.component.html
+++ b/src/app/components/qr-code-viewer/qr-code-viewer.component.html
@@ -2,7 +2,7 @@
   <div class="qr-code-viewer-content card card-container">
     <div #qrcodecard class="">
       <img
-        src="/assets/img/qr-code-frame-img.jpg"
+        src="./assets/img/qr-code-frame-img.jpg"
         class="qr-code-frame profile-img-card"
       />
       <qrcode
