--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="register-content card card-container">
     <img
       id="profile-img"
-      src="/assets/img/bienmenu-long-logo.png"
+      src="./assets/img/bienmenu-long-logo.png"
       class="profile-img-card"
     />
     <div class="alert alert-success" *ngIf="isSuccessful">
