--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,32 +4,8 @@
     <div class="d-flex flex-column">
       <h1>Welcome to BienMenu Admin Tool</h1>
       <p>A space for you to manage your menus with just a few clicks</p>
-      <div class="login-container">
-        <a routerLink="/login"
-          ><button
-            mat-raised-button
-            color="primary"
-            type="button"
-            class="btn btn-lg"
-          >
-            Login
-          </button></a
-        >
-      </div>
-      <!-- <div class="row" *ngIf="!isLoggedIn">
+      <div class="row" *ngIf="!isLoggedIn">
         <div class="col-md-6 text-right">
-          <a routerLink="/register"
-            ><button
-              mat-raised-button
-              color="primary"
-              type="button"
-              class="btn"
-            >
-              Sign Up
-            </button></a
-          >
-        </div>
-        <div class="col-md-6 text-left">
           <a routerLink="/login"
             ><button
               mat-raised-button
@@ -41,7 +17,19 @@
             </button></a
           >
         </div>
-      </div> -->
+        <div class="col-md-6 text-left">
+          <a href="https://www.bien-menu.com"
+            ><button
+              mat-raised-button
+              color="primary"
+              type="button"
+              class="btn"
+            >
+              Sign Up and More
+            </button></a
+          >
+        </div>
+      </div>
     </div>
   </div>
 </div>
