--- a/src/app/components/menu-list/menu-list.component.css
+++ b/src/app/components/menu-list/menu-list.component.css
@@ -1,5 +1,8 @@
+.top-padding {
+  padding-top: 80px;
+}
+
 .menus-container {
-  padding: 80px;
   padding-left: 0;
   padding-right: 0;
   position: relative;
@@ -41,4 +44,37 @@
   border-style: solid;
   border-width: 5px;
   border-color: var(--main-color);
+}
+
+.splash-title h2 {
+  font-family: "Lobster Two", cursive;
+  text-align: center;
+}
+
+.splash-screen {
+  padding: 80px;
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+  display: flex;
+  overflow: auto;
+  min-height: 100vh;
+  width: 100%;
+  background-color: var(--accent-color);
+  justify-content: center;
+  align-items: center;
+}
+
+.splash-screen h3 {
+  font-family: "Lobster Two", cursive;
+  text-align: center;
+}
+
+.splash-screen .bienmenu-long-logo {
+  align-self: center;
+  height: auto;
+  width: auto;
+  max-width: 400px;
+  max-height: 400px;
+  padding-left: 50px;
 }
