--- a/src/app/components/update-menu/update-menu.component.html
+++ b/src/app/components/update-menu/update-menu.component.html
@@ -36,7 +36,7 @@
           class="btn"
           mdbWavesEffect
           mat-raised-button
-          [disabled]="isInvalidFile || !fileToUpload"
+          [disabled]="!isValidFile || !fileToUpload"
           (click)="saveMenu()"
         >
           Submit
@@ -44,8 +44,12 @@
         <div class="alert alert-danger" *ngIf="isOperationFailed">
           Failed to add menu...
         </div>
-        <div class="alert alert-danger" *ngIf="isInvalidFile">
+        <div class="alert alert-danger" *ngIf="!isValidFile && isSubmitted">
           File must not exceed 5 MB and must be in PDF format...
+        </div>
+        <div class="alert alert-info" *ngIf="isSubmitted && !isOperationFailed">
+          File is uploading...this window will close if the file uploads
+          successfully!
         </div>
       </div>
     </div>
