--- a/src/app/components/add-restaurant/add-restaurant.component.css
+++ b/src/app/components/add-restaurant/add-restaurant.component.css
@@ -1,9 +1,9 @@
 .add-restaurant {
-  padding-top: 300px;
+  padding-top: 80px;
   padding-bottom: 20px;
   position: relative;
   overflow: auto;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
