--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -8,9 +8,19 @@
           class="list-group-item d-flex justify-content-between align-items-center"
         >
           {{ restaurant.name }}
-          <a routerLink="/detail/{{ restaurant._id }}">
-            <button mat-raised-button class="btn">view</button>
-          </a>
+          <div class="d-flex justify-content-between">
+            <a routerLink="/menus/{{ restaurant._id }}">
+              <button mat-raised-button class="btn">Menus</button>
+            </a>
+            <div class="divider"></div>
+            <a routerLink="/detail/{{ restaurant._id }}">
+              <button mat-raised-button class="btn">Manage</button>
+            </a>
+            <div class="divider"></div>
+            <a routerLink="/qrcode/{{ restaurant._id }}">
+              <button mat-raised-button class="btn">QR Code</button>
+            </a>
+          </div>
         </li>
       </ul>
       <a routerLink="/add">
