--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,33 +2,10 @@
   <img src="./assets/img/home-background.jpg" />
   <div class="home-content container">
     <div class="d-flex flex-column">
-      <h1>Welcome to BienMenu Admin Tool</h1>
+      <h1>Welcome to the BienMenu Admin Tool</h1>
       <p>A space for you to manage your menus with just a few clicks</p>
-      <div class="row" *ngIf="!isLoggedIn">
-        <div class="col-md-6 text-right">
-          <a routerLink="/login"
-            ><button
-              mat-raised-button
-              color="primary"
-              type="button"
-              class="btn btn-lg"
-            >
-              Login
-            </button></a
-          >
-        </div>
-        <div class="col-md-6 text-left">
-          <a href="https://www.bien-menu.com"
-            ><button
-              mat-raised-button
-              color="primary"
-              type="button"
-              class="btn"
-            >
-              Sign Up and More
-            </button></a
-          >
-        </div>
+      <div *ngIf="!isLoggedIn">
+        <p>Login or Sign Up to access your restaurant data</p>
       </div>
     </div>
   </div>
