--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,17 +29,14 @@
         <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
           <div *ngIf="f.password.errors.required">Password is required</div>
         </div>
-        <a [routerLink]="['/request-reset-password']">
-          Forgot Password?
-        </a>
       </div>
       <div class="form-group text-center">
         <button mat-raised-button color="primary" class="btn">
           Login
         </button>
       </div>
-      <div class="alert alert-warning" *ngIf="f.submitted && isLoginFailed">
-        Login failed!<br />{{ errorMessage }}
+      <div class="alert alert-danger" *ngIf="submitted && isLoginFailed">
+        Login failed.<br />{{ errorMessage }}
       </div>
     </form>
     <div class="alert alert-success" *ngIf="isLoggedIn">
