--- a/src/app/components/add-restaurant/add-restaurant.component.css
+++ b/src/app/components/add-restaurant/add-restaurant.component.css
@@ -16,3 +16,8 @@
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   padding: 20px; */
 }
+
+.submit-button {
+  width: 100px !important;
+  min-width: unset !important;
+}
