--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -19,7 +19,7 @@
           <div class="d-flex w-100 justify-content-between">
             <div class="d-flex flex-column">
               <h5 class="mb-1">{{ menu.name }}</h5>
-              <div class="d-flex w-100 justify-content-between">
+              <div class="d-flex w-100">
                 <mat-icon matListIcon>touch_app</mat-icon>
                 <p class="mb-1">Tap to view menu</p>
               </div>
@@ -46,7 +46,7 @@
 >
   <div class="container">
     <div class="d-flex flex-column">
-      <h3>Propulsé par / Powered by</h3>
+      <h4>Propulsé par / Powered by</h4>
 
       <img
         class="bienmenu-long-logo"
