fix max menu count and numbers in menu name

--- a/src/app/components/add-menu/add-menu.component.html
+++ b/src/app/components/add-menu/add-menu.component.html
@@ -67,7 +67,11 @@
           mdbWavesEffect
           mat-raised-button
           (click)="saveMenu()"
-          [disabled]="!fileToUpload"
+          [disabled]="
+            !fileToUpload ||
+            menuForm.invalid ||
+            (isSubmitted && !isOperationFailed)
+          "
         >
           Save
         </button>
